@@ -1,4 +1,4 @@
-# Copyright 2006 Roger Bivand
+# Copyright 2006-7 Roger Bivand
 # 
 
 ggwr.sel <- function(formula, data = list(), coords, 
@@ -7,11 +7,9 @@ ggwr.sel <- function(formula, data = list(), coords,
 	if (!is.logical(adapt)) stop("adapt must be logical")
 	if (!is.logical(longlat)) stop("longlat must be logical")
 	if (is(data, "Spatial")) {
-		if (missing(coords)) {
-			if (is(data, "SpatialPolygonsDataFrame")) 
-				coords <- getSpPPolygonsLabptSlots(data)
-			else coords <- coordinates(data)
-		}
+		if (!missing(coords))
+		    warning("data is Spatial* object, ignoring coords argument")
+		coords <- coordinates(data)
 		data <- as(data, "data.frame")
 	}
 	if (missing(coords))
